--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "node-telegram-bot-api": "^0.66.0"
+    "express": "^4.21.0",
+    "node-telegram-bot-api": "^0.66.0",
+    "pg": "^8.13.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.3"
   }
 }
